<resources>
    <string name="app_name">EvaAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Action Menu -->
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- Settings Strings -->
    <string name="automatic_shopping">Automatic Shopping List</string>
    <string name="reset_button">Reset all progress</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="progress_reset">Your progress has been reset.</string>

    <!-- Drawer Strings -->
    <string name="navigation_drawer_header_bottom">Started on %s</string>
    <string name="navigation_drawer_item1">Progress</string>
    <string name="navigation_drawer_item2">Today</string>
    <string name="navigation_drawer_item3">Shopping list</string>
    <string name="navigation_drawer_item4">Achievements</string>
    <string name="navigation_drawer_item5">Challenges</string>

    <!-- Progress Strings -->
    <string name="welcome">Welcome to Carrot!</string>
    <string name="welcome_advice">Start tapping the cards to select dishes.</string>
    <string name="no_skipped_days">You didn\'t skip a single day. We admire you.</string>
    <string name="skipped_days">Don\'t give up, keep the vegan streaks coming!</string>
    <string name="finish_segment">Finish This Segment</string>
    <string name="forgot_dish">You forgot to pick a dish.</string>

    <!-- Today String -->
    <string name="no_dish">You have not chosen a dish yet.</string>
    <string name="cooking_time">Cooking time:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="type">Type:</string>
    <string name="ingredients_title">Ingredients (4 People)</string>
    <string name="preparation_title">Preparation</string>
    <string name="slash">/</string>

    <!-- Shopping List Strings -->
    <string name="shoppinglist_ingredient">Ingredient</string>
    <string name="shoppinglist_amount">Amount</string>

    <!-- Achievements Strings -->
    <string name="max_vegan_streak">Max Vegan Streak</string>
    <string name="total_vegan_days">Total Vegan Days</string>
    <string name="achievements">Achievements</string>

    <!-- Misc. -->
    <string name="plus">+</string>
    <string name="empty_dash">-</string>


</resources>
