<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/calendar"
            android:title="@string/navigation_drawer_item1" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/cooking"
            android:title="@string/navigation_drawer_item2" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/shopping_list"
            android:title="@string/navigation_drawer_item3" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/carrot_trophy"
            android:title="@string/navigation_drawer_item4" />
    </group>
</menu>
